feat(backend): dedicated endpoint to fetch experiment data per table
